--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>React App</title>
   </head>
-  <body>
+  <body className="ebal">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
